Requisito 2 e mudanças no CSS

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     <main>
         <section id="main-section">
             <input type="text" id="text-input" maxlength="60">
+            
+            <input type="file" id="meme-insert">
+            <img src="" alt="">
+
             <div id = "meme-image-container">
-                <img src="" id="image" alt="meme">
+                <img src="" id="meme-image" alt="meme">
                 <p id="meme-text"></p>
             </div>
         </section>
