--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Meme Generator</h1>
+    <header id="header">
+        <h1 id="title">Meme Generator</h1>
     </header>
     <main>
         <section id="main-section">
-            <input type="text" id="text-input" maxlength="60">
-            
+            <input Text: type="text" id="text-input" maxlength="60">
+
             <input type="file" id="meme-insert">
             <img src="" alt="">
 
