Requisito 1 e 3 que estavam dando erro, ajuste no height da id meme-image resolveu

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,12 +13,11 @@
     </header>
     <main>
         <section id="main-section">
-            <input Text: type="text" id="text-input" maxlength="60">
-
-            <input type="file" id="meme-insert">
+            <input type="file" accept="image/*" id="meme-insert">
             <img src="" alt="">
 
-            <div id = "meme-image-container">
+            <input type="text" id="text-input" maxlength="60">
+            <div id="meme-image-container">
                 <img src="" id="meme-image" alt="meme">
                 <p id="meme-text"></p>
             </div>
