Requisito 6 e ajustes na organizaçao do script, colocando as funçoes e os listeners agrupados

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
             <input type="file" accept="image/*" id="meme-insert">
             <img src="" alt="">
 
+            <div id="buttons">
+                <button id="normal">NORMAL</button>
+                <button id="fire">FIRE</button>
+                <button id="water">WATER</button>
+                <button id="earth">EARTH</button>
+            </div>
+
             <input type="text" id="text-input" maxlength="60">
             <div id="meme-image-container">
                 <img src="" id="meme-image" alt="meme">
