Requisito 7, desfiz o agrupamento de funçoes e listeners para melhor identficaçao das funçoes e seus eventos, fim do projeto

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                 <p id="meme-text"></p>
             </div>
         </section>
+        <section id="memes">
+            <img src="/imgs/meme1.png" id="meme-1" class="memeImages" alt="meme1">
+            <img src="/imgs/meme2.png" id="meme-2" class="memeImages" alt="meme2">
+            <img src="/imgs/meme3.png" id="meme-3" class="memeImages" alt="meme3">
+            <img src="/imgs/meme4.png" id="meme-4" class="memeImages" alt="meme4">
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
